--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
+    <header id="header">
+      <img id="header-img" alt="company logo" src="https://img.freepik.com/psd-premium/maqueta-logotipo-3d-pared-negra_253059-53.jpg?w=1380">
+      <nav id="nav-bar">
+
+      </nav>
+    </header>
+    <main>
+
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <p>Hello Word!</p>
     <script  src="js/index.js"></script>
